--- a/meta/tmpl/Dockerfile.tmpl
+++ b/meta/tmpl/Dockerfile.tmpl
@@ -339,7 +339,7 @@ RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master
     && find "$plugins" -name .git -type d -prune -exec rm -rf {} \;
 
 RUN mv "$home/.zshrc" "$home/.zshrc_original" \
-    && ln -s "$workdir/.ws/.meta/zsh/.zshrc" "$home/.zshrc"
+    && ln -s "$workdir/.ws/meta/zsh/.zshrc" "$home/.zshrc"
 
 RUN git clone --depth 1 --branch v{{ $astronvim }} https://github.com/AstroNvim/AstroNvim ~/.config/nvim \
     && git clone --depth 1 https://github.com/vtvz/astronvim ~/.config/astronvim/lua
@@ -349,13 +349,13 @@ RUN git clone --depth 1 --branch v{{ $astronvim }} https://github.com/AstroNvim/
 RUN helm plugin install "https://github.com/databus23/helm-diff" --version "v{{ $helm_diff }}"
 {{- end }}
 
-ENV PATH="$workdir/.ws/.meta/bin:${PATH}"
-ENV DIRENV_CONFIG="$workdir/.ws/.meta/direnv"
-ENV STARSHIP_CONFIG="$workdir/.ws/.meta/starship/config.toml"
+ENV PATH="$workdir/.ws/meta/bin:${PATH}"
+ENV DIRENV_CONFIG="$workdir/.ws/meta/direnv"
+ENV STARSHIP_CONFIG="$workdir/.ws/meta/starship/config.toml"
 {{- if $gcloud }}
-ENV CLOUDSDK_CONFIG="$workdir/.ws/.meta/var/gcloud"
+ENV CLOUDSDK_CONFIG="$workdir/.ws/meta/var/gcloud"
 {{- end }}
-ENV TF_PLUGIN_CACHE_DIR="$workdir/.ws/.meta/var/tf/plugin-cache"
+ENV TF_PLUGIN_CACHE_DIR="$workdir/.ws/meta/var/tf/plugin-cache"
 
 WORKDIR $workdir
 
